--- a/src/components/LangSwitchButton.astro
+++ b/src/components/LangSwitchButton.astro
@@ -25,6 +25,7 @@
     position: fixed;
     top: 4px;
     right: -3px;
+    font-family: "Gilda Display", serif;
   }
 
   #lang-switch-button > .label {
