--- a/src/components/LangSwitchButtonM.astro
+++ b/src/components/LangSwitchButtonM.astro
@@ -29,6 +29,7 @@
     position: fixed;
     top: 4px;
     right: 6px;
+    font-family: "Gilda Display", serif;
   }
 
   #lang-switch-button-m > .label {
