--- a/src/components/Wydarzenie.astro
+++ b/src/components/Wydarzenie.astro
@@ -49,7 +49,7 @@
         <p class="data-wydarzenia-dzien">21</p>
         <p class="data-wydarzenia-m-r">cze<br>2024</p>
     </div>
-    <a id="nazwa-wydarzenia">Teats Barakaii</a>
+    <a id="nazwa-wydarzenia">Teatr Barakaii</a>
     <a id="miejsce-wydarzenia">Kraków</a>
     <a id="data-wydarzenia-link">19:00 - 20:00</a>
 </div>
