--- a/src/components/en_components/Header.astro
+++ b/src/components/en_components/Header.astro
@@ -1,11 +1,11 @@
 ---
 import Logo from '../assets/logoo.svg';
 const links = [
-  { name: "O nas", href: "/o-nas" },
-  { name: "Posłuchaj", href: "/posluchaj" },
-  { name: "Projekty", href: "/projekty" },
-  { name: "Płyty", href: "/plyty" },
-  { name: "Kontakt", href: "/kontakt" }
+  { name: "About us", href: "/en/about" },
+  { name: "Listen", href: "/en/listen" },
+  { name: "Projects", href: "/en/projects" },
+  { name: "Albums", href: "/en/albums" },
+  { name: "Contact", href: "/en/contact" }
 ];
 ---
 <!-- TODO - na dole na mobile jak sie rozwija hamburger menu fajnie jakby na dole bylo logo fantastica to pelne -->
@@ -20,7 +20,7 @@ const links = [
   </ul>
 
 <!-- Navigation - Mobile -->
-  <div class="mobile-nav">
+  <div class="mobile-nav">ą
     <nav role="navigation">
       <div id="menuToggle">
         <input type="checkbox" id="menuCheckbox" />
