--- a/src/components/en_components/Kontakt_cmpnt.astro
+++ b/src/components/en_components/Kontakt_cmpnt.astro
@@ -1,21 +1,21 @@
 ---
-import kontaktImg from '../assets/kontakt.png';
-import fbIcon from '../assets/fb_icon.svg';
-import igIcon from '../assets/ig-kontakt.svg';
+import kontaktImg from '../../assets/kontakt.png';
+import fbIcon from '../../assets/fb_icon.svg';
+import igIcon from '../../assets/ig-kontakt.svg';
 ---
 <div class="kontakt-container">
     <div class="heading-kontakt">
-        <h1>Chcesz z nami współpracować?</h1>
+        <h1>Do you want to collaborate with us?</h1>
     </div>
     <div class="kontakt">
         <div class="footer-left">
-            <h2>DOŁĄCZ DO NAS</h2>
+            <h2>JOIN US</h2>
             <form action="https://buttondown.email/api/emails/embed-subscribe/szymon" method="post">
                             <input type="email" name="email" placeholder="E-mail" required>
-            <button type="submit" value="Subscribe">ZAPISZ SIĘ</button>
+            <button type="submit" value="Subscribe">SUBSCRIBE</button>
             </form>
         </div>
-        <h3>Kontakt</h3>
+        <h3>Contact</h3>
         <a id="emailson" href="mailto:owczareklobodaduo@gmail.com">owczareklobodaduo@gmail.com</a>
         <div class="footer-social-icons-kontakt">
             <a href="https://www.instagram.com/fantastica.ensemble/" class="footer-right-icon-container"><img class="footer-right-icon" src={igIcon.src} alt="instagram" /> <span>instagram</span></a>
