--- a/src/components/en_components/Posluchaj_cmpnt.astro
+++ b/src/components/en_components/Posluchaj_cmpnt.astro
@@ -1,16 +1,16 @@
 ---
-import ytButton from '../assets/ytButton.svg';
-import spotifyButton from '../assets/spotifyButton.svg';
-import appleButton from '../assets/appleButton.svg';
-import naZywo from '../assets/naZywo.svg';
-import Footer from '../components/Footer.astro';
+import ytButton from '../../assets/ytButton.svg';
+import spotifyButton from '../../assets/spotifyButton.svg';
+import appleButton from '../../assets/appleButton.svg';
+import naZywo from '../../assets/naZywo.svg';
+import Footer from '../../components/en_components/Footer.astro';
 ---
 <!-- TODO - zaczyna sie zoomed in na phone!!, nie ma footera, moze lepszy embed z wieksza iloscia filmikow, zamien filmik, dodaj linki do przyciskow -->
 <div class="posluchaj-container">
     <div class="posluchaj-socials-container">
         <div class="posluchaj-socials-header">
             <p>
-                Posłuchaj nas:
+                Listen to us:
             </p>
         </div>
         <div class="posluchaj-socials">
@@ -34,7 +34,7 @@ import Footer from '../components/Footer.astro';
     <div class="zobacz-na-zywo-container">
         <div class="zobacz-na-zywo">
             <p>
-                Zobacz nas w akcji:
+                Watch us live:
             </p>
         </div>
         <div class="zobacz-na-zywo-embed">
