--- a/src/components/en_components/Projekty_cmpnt.astro
+++ b/src/components/en_components/Projekty_cmpnt.astro
@@ -1,20 +1,21 @@
 ---
-import projektyHeadlineImg from '../assets/projektyHeadline.png';
+import projektyHeadlineImg from '../../assets/projektyHeadline.png';
 // TODO - uzyc tego tloProjekty zamiast pelnego url
-import tloProjekty from '../assets/tloProjekty.png';
-import projekt1img from '../assets/projekt1img.png';
-import eclipseProjekty from '../assets/eclipseProjekty.svg';
-import projekt2img from '../assets/projekt2img.png';
-import projekt3img from '../assets/projekt3img.png';
-import projekt4img from '../assets/projekt4img.png';
+import tloProjekty from '../../assets/tloProjekty.png';
+import projekt1img from '../../assets/projekt1img.png';
+import eclipseProjekty from '../../assets/eclipseProjekty.svg';
+import projekt2img from '../../assets/projekt2img.png';
+import projekt3img from '../../assets/projekt3img.png';
+import projekt4img from '../../assets/projekt4img.png';
 ---
+<!-- TODO - 2 nie ma kolek na nazwach -->
 <div class="projekty-container">
     <!-- TODO - lepszy scaling (chcialbym zeby to zdjecie sie lepiej skalowalo), i moze background animated gradient, font weight jest dziwny -->
     <div class="projekty-headline">
         <!-- TODO - zrobic tak zeby jak sie przy 1200px zmienialo to zeby bylo bardziej kanciaste jak w canvie -->
         <img class="projektyHeadlineImg" src={projektyHeadlineImg.src} alt="" />
         <div class="projekty-headline-text">
-            <h1>Projekty</h1>
+            <h1>Projects</h1>
             <p>
                 Fantastica Ensemble to muzyka, która przekracza granice – nie tylko czasowe, ale i estetyczne. Każdy nasz projekt to podróż, w której barok łączy się z gestem, improwizacją i nowoczesnym spojrzeniem na sztukę
             </p>
@@ -44,22 +45,23 @@ import projekt4img from '../assets/projekt4img.png';
                     FANTASTICUS
                 </h2>
                 <h4>
-                    Barokowa Fantazja<br>     
-                    Bez Granic
+                    Baroque Fantasy<br>     
+                    Without Borders
                 </h4>
                 <p class="projekt-text-p">
-                    Wirtuozeria, szaleństwo i dźwiękowa podróż przez Habsburskie Imperium XVII wieku. "Fantasticus" to program pełen intensywnych, wirtuozowskich wyzwań w stylus fantasticus – stylu pełnym muzycznych uniesień, nieskrępowanej improwizacji i zaskakujących zwrotów. To zderzenie dobrze znanych sonat H.I.F. Bibera z niemal zapomnianymi kompozycjami, jak na przykład odkryta niedawno Sonata d-moll Heinricusa Litzkaua, która jest prawdziwą dźwiękową perłą. Zarejestrowany przez Da Vinci Publishing projekt to podróż w świat barokowej fantazji, gdzie wszystko jest możliwe, a granice między utworami, emocjami a wyobraźnią zacierają się, tworząc jedno spójne, pulsujące dzieło.
+                    Virtuosity, madness, and a sonic journey through the 17th-century Habsburg Empire. Fantasticus is a program brimming with intense, virtuosic challenges in stylus fantasticus—a style full of musical ecstasy, unfettered improvisation, and unexpected twists. It is a collision of well-known sonatas by H.I.F. Biber with nearly forgotten compositions, such as the recently rediscovered Sonata in D minor by Heinricus Litzkau, a true musical gem.   
+                    Recorded by Da Vinci Publishing, this project is a journey into the world of Baroque fantasy, where everything is possible, and the boundaries between compositions, emotions, and imagination blur, creating a single, cohesive, pulsating work.
                 </p>
             </div>
         </div>
         <div class="projekt-1-down">
             <div id="bg-eclipse">
                 <ul>
-                    <li>G.B. Viviani - Sonata a-moll</li>
-                    <li>Ph. F. Böddecker - Sonata d-moll</li>
-                    <li>H.I.F. von Biber - Sonata dorycka C 139</li>
-                    <li>H. Litzkau - Sonata d-moll</li>
-                    <li>H.I.F. von Biber - Sonata e-moll C142</li>
+                    <li>G.B. Viviani – Sonata in A minor</li>
+                    <li>Ph. F. Böddecker – Sonata in D minor</li>
+                    <li>H.I.F. von Biber – Dorian Sonata C 139</li>
+                    <li>H. Litzkau – Sonata in D minor</li>
+                    <li>H.I.F. von Biber – Sonata in E minor C 142</li>
                 </ul>
             </div>
         </div>
@@ -81,24 +83,24 @@ import projekt4img from '../assets/projekt4img.png';
             </div>
             <div class="projekt-2-text">
                 <h2>
-                    Biber. Trochę sacrum.<br> Trochę profanum.
+                    Biber. Sacrum. Profanum
                 </h2>
                 <h4>
-                    zmysłowa gra kontrastów
+                    A Sensual Play of Contrasts
                 </h4>
                 <p  class="projekt-text-p">
-                    Od mistyki po uliczny puls – muzyka, która kusi i zaskakuje. „Biber. Trochę sacrum. Trochę profanum.” to program, który śmiało bawi się granicą między sacrum a profanum. Zanurzone w ludowych rytmach sonaty Bibera sprawiają, że duchowość i erotyzm w muzyce splatają się w nieoczekiwanych miejscach. To opowieść pełna intensywności – zmysłowa, niepokorna, a momentami mistyczna. To czas energetycznej podróży, gdzie każdy dźwięk może stać się impulsem do kreacji na scenie – od żywiołowych, karczemnych klimatów po najgłębsze momenty sacrum. W programie celebrujemy piękno i nieprzewidywalność barokowych kontrastów, tworząc możliwość refleksji, ale też doświadczania czystej radości muzyki, która przekracza granice czasu i wyobraźni.
+                    From mysticism to the pulse of the streets—music that seduces and surprises. Biber. Sacrum. Profanum. is a program that boldly plays with the boundary between the sacred and the profane. Immersed in folk rhythms, Biber’s sonatas intertwine spirituality and sensuality in unexpected places. This is a story full of intensity—sensual, rebellious, and at times mystical. It is a journey of raw energy, where every sound becomes an impulse for creation on stage—from lively, tavern-like atmospheres to the deepest moments of the sacred. In this program, we celebrate the beauty and unpredictability of Baroque contrasts, creating a space for both reflection and the sheer joy of music that transcends time and imagination.
                 </p>
             </div>
         </div>
         <div class="projekt-2-down">
             <div id="bg-eclipse">
                 <ul>
-                    <li>H.I.F. von Biber - Sonata misteryjna „Wniebowzięcie NMP”</li>
-                    <li>H.I.F. von Biber - Sonata F-dur C140</li>
-                    <li>H.I.F. von Biber - Sonata misteryjna „Zwiastowanie NMP”</li>
-                    <li>H.I.F. von Biber - Sonata c-moll C143</li>
-                    <li>H.I.F. von Biber -Sonata misteryjna „Ukrzyżowanie”</li>
+                    <li>H.I.F. von Biber - Mystery Sonata “The Assumption of the Virgin”</li>
+                    <li>H.I.F. von Biber - Sonata in F major C 140</li>
+                    <li>H.I.F. von Biber - Mystery Sonata "The Annunciation"</li>
+                    <li>H.I.F. von Biber - Sonata in C minor C 143</li>
+                    <li>H.I.F. von Biber - Mystery Sonata "The Crucifixion"</li>
                 </ul>
             </div>
         </div>
@@ -113,16 +115,17 @@ import projekt4img from '../assets/projekt4img.png';
                     La Stella
                 </h2>
                 <h4>
-                    Muzyczny Bunt
+                    A Musical Rebellion
                 </h4>
                 <p class="projekt-text-p">
-                    Ekscentryczny geniusz, który nie znał granic, czyli Giovanni Antonio Pandolfi Mealli. Jeśli szukasz czegoś niezapomnianego "La Stella" to projekt stworzony dla Ciebie. Jego nieprzewidywalne, ciągle zmieniające się emocje w sonatach op. 4 są jak muzyczne tornado - szalone, pełne pasji i namiętności. Dedykowane przyjaciołom i znajomym kompozytora utwory są nie tyle osobistymi wyznaniami, a dźwiękową ekstrawagancją, która wciąga od pierwszej do ostatniej nuty. Najnowszy projekt dedykowany Pandolfiemu miał swoją premierę na festiwalu Gregoriana Sastamala w Finlandii. To muzyczna podróż do ekscentrycznego świata baroku.                </p>
+                    An eccentric genius who knew no limits—Giovanni Antonio Pandolfi Mealli. If you’re looking for something unforgettable, La Stella is the project for you. His sonatas from Op. 4 are a whirlwind of constantly shifting emotions—a musical tornado that is wild, passionate, and full of intensity. Dedicated to the composer’s friends and acquaintances, these pieces are not just personal confessions but a sonic extravagance that captivates from the very first note to the last. Our latest project, dedicated to Pandolfi Mealli, premiered at the Gregoriana Sastamala Festival in Finland. It is a musical journey into the eccentric world of Baroque.
+                </p>
             </div>
         </div>
         <div class="projekt-3-down">
             <div id="bg-eclipse">
                 <ul>
-                    <li>G.A. Pandolfi Mealli - Sonaty op. 4</li>
+                    <li>G.A. Pandolfi Mealli - Sonatas Op. 4</li>
                     <li>G.A. Pandolfi Mealli - La barnabea</li>
                     <li>G.A. Pandolfi Mealli - La viviana La monella romanesca</li>
                     <li>G.A. Pandolfi Mealli - La bianchiccia</li>
@@ -142,21 +145,22 @@ import projekt4img from '../assets/projekt4img.png';
                     SPLEEN
                 </h2>
                 <h4>
-                    Jesienna Melancholia
+                    Autumn Melancholy
                 </h4>
                 <p class="projekt-text-p">
-                    Barokowa melancholia pełna zwrotów akcji. SPLEEN to podróż przez dźwięki od połowy XVII do XVIII wieku, badająca tonację d-moll w jej wszystkich odcieniach i możliwościach. W tym programie wirtuozowskie utwory są pełne żywych emocji. Do ich połączenia inspirowała jesienna chandra i "Krakowski Spleen" Kory. Każdy utwór staje się zaproszeniem do podróży wewnątrz samego siebie, przynosząc chwilę zadumy i radości jednocześnie. SPLEEN łączy głębokie uczucia z pozytywną energią, poruszając serca i odkrywając piękno barokowych form. Każdy fragment zapraszaja do refleksji łączącej głębię z lekkością, poruszając serca i umysły w zaskakujący sposób.
+                    Baroque melancholy with unexpected twists. SPLEEN is a journey through sound from the mid-17th to the 18th century, exploring the key of D minor in all its shades and possibilities. This program brings together virtuosic pieces filled with raw emotion, inspired by the wistful mood of autumn and the legendary Krakowski Spleen by Kora.
+                    Each piece is an invitation to an inner journey, offering both introspection and joy. SPLEEN blends deep emotions with uplifting energy, touching the heart and revealing the beauty of Baroque forms. Every fragment encourages reflection, balancing depth with lightness, moving both the heart and mind in unexpected ways.
                 </p>
             </div>
         </div>
         <div class="projekt-4-down">
             <div id="bg-eclipse">
                 <ul>
-                    <li>Ph. F. Böddecker - Sonata d-moll</li>
-                    <li>J.P. von Westhoff - III Sonata d-moll</li>
-                    <li>H.I.F. Biber - Sonata misteryjna „Ofiarowanie Jezusa w Świątyni”</li>
-                    <li>C.A. Lonati - II Sonata d-moll</li>
-                    <li>F.M. Veracini - XII Sonata d-moll op.2</li>
+                    <li>Ph. F. Böddecker – Sonata in D minor</li>
+                    <li>J.P. von Westhoff – III Sonata in D minor</li>
+                    <li>H.I.F. Biber – Mystery Sonata "The Presentation of Jesus in the Temple"</li>
+                    <li>C.A. Lonati – II Sonata in D minor</li>
+                    <li>F.M. Veracini – XII Sonata in D minor, Op. 2</li>
                 </ul>
             </div>
         </div>
@@ -178,7 +182,7 @@ import projekt4img from '../assets/projekt4img.png';
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
         grid-template-rows: max-content;
-        background-image: url("../assets/tloProjekty.png");
+        background-image: url("../../assets/tloProjekty.png");
         height: auto;
         align-content: end;    
         padding-top: 16vh;
@@ -275,7 +279,7 @@ import projekt4img from '../assets/projekt4img.png';
     #bg-eclipse {
         height: 100%;
         width: 100%;
-        background-image: url("../assets/eclipseProjekty.svg");
+        background-image: url("../../assets/eclipseProjekty.svg");
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
         background-size: 80% 100%;
@@ -387,7 +391,7 @@ import projekt4img from '../assets/projekt4img.png';
     #bg-eclipse {
         height: 100%;
         width: 100%;
-        background-image: url("../assets/eclipseProjekty.svg");
+        background-image: url("../../assets/eclipseProjekty.svg");
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
         background-size: 80% 100%;
@@ -459,7 +463,7 @@ import projekt4img from '../assets/projekt4img.png';
     #bg-eclipse {
         height: 100%;
         width: 100%;
-        background-image: url("../assets/eclipseProjekty.svg");
+        background-image: url("../../assets/eclipseProjekty.svg");
         background-position: center; /* Center the image */
         background-repeat: no-repeat; /* Do not repeat the image */
         background-size: 80% 100%;
