--- a/src/components/en_components/Wydarzenie.astro
+++ b/src/components/en_components/Wydarzenie.astro
@@ -1,17 +1,17 @@
-<!-- TODO - szczegoly do zrobienia -->
+<!-- TODO - details to be done -->
 <div class="wydarzenie">
     <div id="data-wydarzenia">
         <p class="data-wydarzenia-dzien">09</p>
         <p class="data-wydarzenia-m-r">mar<br>2024</p>
     </div>
     <a id="nazwa-wydarzenia">Fantasticus</a>
-    <a id="miejsce-wydarzenia">Warszawa</a>
+    <a id="miejsce-wydarzenia">Warsaw</a>
     <a id="data-wydarzenia-link">17:30 - 18:30</a>
 </div>
 <div class="wydarzenie">
     <div id="data-wydarzenia">
         <p class="data-wydarzenia-dzien">25</p>
-        <p class="data-wydarzenia-m-r">lip<br>2024</p>
+        <p class="data-wydarzenia-m-r">jul<br>2024</p>
     </div>
     <a id="nazwa-wydarzenia">Biber Troche S</a>
     <a id="miejsce-wydarzenia">Sobótka</a>
@@ -20,7 +20,7 @@
 <div class="wydarzenie">
     <div id="data-wydarzenia">
         <p class="data-wydarzenia-dzien">21</p>
-        <p class="data-wydarzenia-m-r">lip<br>2024</p>
+        <p class="data-wydarzenia-m-r">jul<br>2024</p>
     </div>
     <a id="nazwa-wydarzenia">Pandolfi Mealli</a>
     <a id="miejsce-wydarzenia">Murto</a>
@@ -29,7 +29,7 @@
 <div class="wydarzenie">
     <div id="data-wydarzenia">
         <p class="data-wydarzenia-dzien">11</p>
-        <p class="data-wydarzenia-m-r">lip<br>2024</p>
+        <p class="data-wydarzenia-m-r">jul<br>2024</p>
     </div>
     <a id="nazwa-wydarzenia">Fantastica</a>
     <a id="miejsce-wydarzenia">Gigole</a>
@@ -38,19 +38,19 @@
 <div class="wydarzenie">
     <div id="data-wydarzenia">
         <p class="data-wydarzenia-dzien">21</p>
-        <p class="data-wydarzenia-m-r">cze<br>2024</p>
+        <p class="data-wydarzenia-m-r">jun<br>2024</p>
     </div>
     <a id="nazwa-wydarzenia">Pandolfi Mealli</a>
-    <a id="miejsce-wydarzenia">Kraków</a>
+    <a id="miejsce-wydarzenia">Krakow</a>
     <a id="data-wydarzenia-link">19:00 - 20:00</a>
 </div>
 <div class="wydarzenie">
     <div id="data-wydarzenia">
         <p class="data-wydarzenia-dzien">21</p>
-        <p class="data-wydarzenia-m-r">cze<br>2024</p>
+        <p class="data-wydarzenia-m-r">jun<br>2024</p>
     </div>
-    <a id="nazwa-wydarzenia">Teats Barakaii</a>
-    <a id="miejsce-wydarzenia">Kraków</a>
+    <a id="nazwa-wydarzenia">Theater Barakaii</a>
+    <a id="miejsce-wydarzenia">Krakow</a>
     <a id="data-wydarzenia-link">19:00 - 20:00</a>
 </div>
 
