--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,14 @@ const pageTitles = {
   '/posluchaj': 'Fantastica | Posłuchaj',
   '/projekty': 'Fantastica | Projekty',
   '/plyty': 'Fantastica | Płyty',
-  '/kontakt': 'Fantastica | Kontakt'
+  '/kontakt': 'Fantastica | Kontakt',
+  // English routes
+  '/en': 'Fantastica',
+  '/en/about': 'Fantastica | About',
+  '/en/listen': 'Fantastica | Listen',
+  '/en/projects': 'Fantastica | Projects',
+  '/en/albums': 'Fantastica | Albums',
+  '/en/contact': 'Fantastica | Contact'
 };
 
 // Get the current pathname
