--- a/src/components/en_components/Footer.astro
+++ b/src/components/en_components/Footer.astro
@@ -1,21 +1,21 @@
 ---
-import fbIcon from '../assets/fb_icon.svg';
-import igIcon from '../assets/ig_icon.svg';
-import ytIcon from '../assets/yt_icon.svg';
+import fbIcon from '../../assets/fb_icon.svg';
+import igIcon from '../../assets/ig_icon.svg';
+import ytIcon from '../../assets/yt_icon.svg';
 ---
-<footer>
+ <footer>
     <div id="footer-gradient">
     </div>
     <div class="footer">
         <div class="footer-left">
-            <h2>DOŁĄCZ DO NAS</h2>
+            <h2>JOIN US</h2>
             <form action="https://buttondown.email/api/emails/embed-subscribe/szymon" method="post">
                             <input type="email" name="email" placeholder="E-mail" required>
-            <button type="submit" value="Subscribe">ZAPISZ SIĘ</button>
+            <button type="submit" value="Subscribe">SUBSCRIBE</button>
         </form>
         </div>
         <div class="footer-right">
-            <h3>Kontakt</h3>
+            <h3>Contact</h3>
             <a id="emailson" href="mailto:owczareklobodaduo@gmail.com">owczareklobodaduo@gmail.com</a>
             <div class="footer-social-icons">
                 <a href="https://www.youtube.com/@owczarekobodaduo3746" class="footer-right-icon-container"><img class="footer-right-icon" src={ytIcon.src} alt="youtube" /> <span>youtube</span></a>
@@ -140,7 +140,7 @@ import ytIcon from '../assets/yt_icon.svg';
         .footer-left h2 {
             margin: 0 0 5vw 0;
             font-size: 10.6vw;
-            justify-self: center;
+            justify-self: start;
         }
         .footer-left input {
             width: 44%;
