--- a/src/components/en_components/Wydarzenia.astro
+++ b/src/components/en_components/Wydarzenia.astro
@@ -1,5 +1,5 @@
 ---
-import Wydarzenie from '../components/Wydarzenie.astro'
+import Wydarzenie from '../../components/en_components/Wydarzenie.astro'
 ---
 
 <div class="wydarzenia-cmpnt">
