--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -1,5 +1,5 @@
 ---
-import About_cmpnt from '../../components/About_cmpnt.astro';
+import About_cmpnt from '../../components/en_components/About_cmpnt.astro';
 import Layout from '../../layouts/Layout.astro';
 ---
 
